[package]
name = "mrpc_python_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mrpc_python_base"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
mrpc.workspace = true
prost = { workspace = true, features = ["mrpc-frontend"] }

structopt.workspace = true
smol.workspace = true