[package]
name = "python_image_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_image_server"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
mrpc.workspace = true
ctrlc = "3.4.0"
prost = { workspace = true, features = ["mrpc-frontend"] }
base64 = "0.21.2"
structopt.workspace = true
smol.workspace = true
shm.workspace = true
shmalloc.workspace = true